.vscode/settings.json index.html main.js style.css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container" id="app">
-		<h1>Task Manager</h1>
+		<h1>Task Management</h1>
         <form>
             <input type="text" v-model="newTask" autocomplete="off">
 		    <button id="add-task" v-on:click="addTask">Add Task</button>
